<resources>
    <!--Sign in, Sign out String resources-->
    <string name="app_name">PocketUni</string>
    <string name="app_logo_name">PocketUni_Logo_White</string>
    <string name="username_placeholder">SLIIT Email</string>
    <string name="username_hint">Your SLIIT Email</string>
    <string name="name_hint">Full Name</string>
    <string name="password_placeholder">Password</string>
    <string name="confpassword_placeholder">Confirm Password</string>
    <string name="password_hint">PocketUni Password</string>
    <string name="confpassword_hint">PocketUni Password</string>
    <string name="year_placeholder">Year</string>
    <string name="sem_placeholder">Semester</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="devteam">XCoders</string>
    <string name="gotosignup">Don\'t have an Account yet?\nSign up now</string>
    <string name="gotosignin">Already have an Account?\nPlease sign in.</string>
    <string name="email_regex">^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@[mM][yY]\.[sS][lL][iI][Ii][tT]\.[Ll][Kk]</string>
    <string name="student_email_regex">^[A-Za-z]{2}[0-9]{1,}@[mM][yY]\.[sS][lL][iI][Ii][tT]\.[Ll][Kk]</string>
    <string name="admin_email">admin@my.sliit.lk</string>
    <string name="wrong_email_domain_error">Enter a valid SLIIT Email Address</string>

    <string-array name="semester">
        <item>Year 1 Semester 1</item>
        <item>Year 1 Semester 2</item>
        <item>Year 2 Semester 1</item>
        <item>Year 2 Semester 2</item>
        <item>Year 3 Semester 1</item>
        <item>Year 3 Semester 2</item>
        <item>Year 4 Semester 1</item>
        <item>Year 4 Semester 2</item>
    </string-array>

    <string-array name="course">
        <item>Software Engineering</item>
        <item>Information Technology</item>
        <item>Information Systems Engineering</item>
        <item>Computer Systems &amp; Network</item>
        <item>Cyber Security</item>
        <item>Interactive Media</item>
        <item>Data Science</item>
    </string-array>

    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="reminderMinutes">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>

    <!--Organizer String Resources-->
    <!--IT19069432-->
    <!--Organizer Main Activity String Resources-->
    <string name="organizer_title">Organizer</string>
    <string name="admin_organizer_description">Add Semester Timetables, Publish Deadlines or Broadcast Notices in a snap.</string>
    <string name="std_organizer_description">Get semester timetable updates, Notices and Keep track on deadlines.</string>
    <string name="organizer_timetable_header">Timetables</string>
    <string name="admin_organizer_timetable_description">Manage Semester Timetables and send updates in realtime.</string>
    <string name="std_organizer_timetable_description">Manage Semester Timetables and send updates in realtime.</string>
    <string name="organizer_deadlines_header">Deadlines</string>
    <string name="admin_organizer_deadlines_description">DeadlinesDesc</string>
    <string name="std_organizer_deadlines_description">DeadlinesDesc</string>
    <string name="organizer_notices_header">Notices</string>
    <string name="admin_organizer_notices_description">NoticesDesc</string>
    <string name="std_organizer_notices_description">NoticesDesc</string>
    <!--Organizer Timetable Activity String Resources-->
    <string name="timetable_name_common">{Timetable Name}</string>
    <string name="timetable_title">Timetables</string>
    <string name="admin_timetable_description">Manage all semester timetables quicker. Publish in realtime.</string>
    <string name="admin_timetable_description_error">There aren\'t any timetables available yet.</string>
    <string name="admin_timetableslot_description_error">There aren\'t any timetables slots available for this timetable yet.</string>
    <string name="std_timetable_description">Get Timetables, Timetable Updates and set Notifications.</string>
    <!--Organizer Deadlines  Activity String Resources-->
    <string name="deadlines_title">Deadlines</string>
    <string name="admin_deadlines_description">Keep undergraduates up-to-date on upcoming deadlines.</string>
    <string name="std_deadlines_description">All upcoming deadlines of your course.</string>
    <!--Organizer Notices Activity String Resources-->
    <string name="notices_title">Notices</string>
    <string name="admin_notices_description">Send notices in seconds. </string>
    <string name="std_notices_description">Get notified when there are new notices and stay up-to-date.</string>
    <!--Organizer dialogs common resources-->
    <string name="dialog_close">Close</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_save">Save</string>
    <!--Organizer dialogs add timetable dialog resources-->
    <string name="admin_add_timetable">Add Timetable</string>
    <string name="dialog_batch_number_hint">Batch Number</string>
    <string name="dialog_batch_number_invalid_error">INVALID BATCH NUMBER</string>
    <string name="dialog_batch_number_empty_error">BATCH CANNOT BE EMPTY</string>
    <!--Organizer dialogs add time slot dialog resources-->
    <string name="textview_start_time">Start Time:</string>
    <string name="textview_end_time">End Time:</string>
    <string name="dialog_add_slot_title">Add Timetable Slot</string>
    <string name="dialog_delete_conf_box_title">Are you sure?</string>
    <string name="dialog_subject_code">Subsject Code</string>
    <string name="dialog_subject_name_hint">Subject Name (Optional)</string>
    <string name="dialog_start_time_hint">Start Time</string>
    <string name="dialog_end_time_hint">End Time</string>
    <string name="dialog_lec_hint">Lecturer (Optional)</string>
    <string name="dialog_venue_hint">Venue</string>
    <!--Organizer dialogs add timetable reminder dialog resources-->
    <string name="timetable_reminder_title">Timetable Reminder Settings</string>
    <string name="textview_timetable_timepicker">Remind Me Before:</string>
    <string name="reminder_dialog_description_text">Reminders let you know the next subject of your course before the number of minutes you specify below. Maximum time you can specify is 60 Minutes.</string>
    <string name="reminder_switch">Enable Reminders</string>


    <!--Timeline String Resources-->
    <string name="timeline_search">Search Posts</string>
    <string name="timeline_title">Timeline</string>
    <string name="timeline_notices">General Notices</string>
    <string name="timeline_posts">Posts</string>
    <string name="default_post_owner">John Doe</string>
    <string name="default_post_time">0 hours ago</string>
    <string name="default_post_itnumber">IT19000000</string>
    <string name="post_delete">Delete</string>
    <string name="post_comment">Comment...</string>
    <string name="default_post_content">Post Contents</string>
    <string name="default_username">Me</string>
    <string name="post_edit">Edit</string>
    <string name="delete_post_dialog_title">Delete Post</string>
    <string name="dialog_delete">Delete</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this post?\n You cannot recover a deleted post.</string>
    <string name="post_delete_confirmation_toast">Post Deleted</string>
    <string name="add_post_confirmation_toast">POST ADDED.</string>
    <string name="add_post_button_text">Add Post</string>
    <string name="cancel_post_button_text">Cancel</string>
    <string name="timetableslots_error_text">Timetable Error Viewer</string>
    <string name="headerimage_content_description">HeaderImage</string>
    <string name="viewtimetable_course">Timetable Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="postAudience">
        <item>General</item>
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
    </string-array>

    <!--Messenger String Resources-->
    <!--IT19075754-->
    <!--Admin/chat String Resources-->
    <string name="messenger">Messenger</string>
    <string name="infoText">To start a chat, Go to the Users Tab and select a user first.</string>
    <string name="emailTextView">message body</string>
    <string name="messageDateTimeTextView">2020.09.23 10:20 AM</string>
    <string name="textViewChatInfo">Inbox: 2\nOutbox: 4\nTotal Messages: 6</string>


    <!--Exams/Results String Resources-->
    <!--IT19064932-->
    <!--Results Main Activity String Resources-->
    <string name="results_title">Results</string>
    <string name="admin_results_description">Add, Edit and Update Students results in a instant.</string>
    <string name="results_add_header">Add Results</string>
    <string name="results_update_header">Update Results</string>

    <!--Results Add Activity String Resources-->
    <string name="ca_period_prompt">Choose CA Period</string>
    <string-array name="ca_period_array">
        <item>Jan-Jun</item>
        <item>Jun-Dec</item>
    </string-array>
    <string name="grade_prompt">Choose Grade</string>
    <string-array name="grades">
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C+</item>
        <item>C</item>
        <item>C-</item>
        <item>D+</item>
        <item>D</item>
        <item>E</item>
    </string-array>
    <string-array name="modules">
        <item>Communication Skills</item>
        <item>Computer Networks</item>
        <item>Database Management Systems</item>
        <item>English for Academic Purposes</item>
        <item>Information Systems and Data Modeling</item>
        <item>Internet and Web Technologies</item>
        <item>Introduction to Computer Systems</item>
        <item>Introduction to Programming</item>
        <item>Mathematics for Computing</item>
        <item>Object Oriented Concepts</item>
        <item>Object Oriented Programming</item>
        <item>Operating Systems and System Administration</item>
        <item>Software Engineering</item>
        <item>Software Process Modeling</item>
    </string-array>

    <!--Results Added Activity String Resources-->
    <string name="results_added_header">Results Added</string>

    <!--Results Dialog Box Activity String Resources-->
    <string-array name="semester_in_letters">
        <item>Year One Semester One</item>
        <item>Year One Semester Two</item>
        <item>Year Two Semester One</item>
        <item>Year Two Semester Two</item>
        <item>Year Three Semester One</item>
        <item>Year Three Semester Two</item>
        <item>Year Four Semester One</item>
        <item>Year Four Semester Two</item>
    </string-array>

    <!-- Students Results Display Activity String Values-->
    <string name="cumulative_credits">Cumulative \nCredits</string>
    <string name="cumulative_grade_points">Cumulative \nGrade Points</string>
    <string name="cumulative_gpa">Cumulative \nGPA</string>
    <string name="adminMessenger">Messenger</string>

    <!--Profile String Resources-->


</resources>