<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191818"
    tools:context=".SigninActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="236dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        app:srcCompat="@drawable/logotextwhite"
        android:contentDescription="@string/app_logo_name"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:autoText="false"
        android:autofillHints="@string/username_hint"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username_placeholder"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:backgroundTint="@color/edittext_line" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:autofillHints="@string/password_hint"
        android:inputType="textPassword"
        android:text="@string/password_placeholder"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:backgroundTint="@color/edittext_line"/>
</androidx.constraintlayout.widget.ConstraintLayout>