<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--post card item starts-->
    <androidx.cardview.widget.CardView
        android:id="@+id/organizer_tile_timetable2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/card_dark"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/itNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:text="@string/default_post_itnumber"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postedPersonNameTextView" />

            <TextView
                android:id="@+id/itNumberTextView2"
                android:layout_width="0dp"
                android:layout_height="82dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                android:text="@string/default_post_content"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/postedPersonNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="14dp"
                android:paddingEnd="20dp"
                android:text="@string/default_post_owner"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/profilePictureContainer"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/postedTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/default_post_time"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profilePictureContainer"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/circle"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/color_dp_red"
                    android:src="@drawable/avatar"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/commentSection"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:cardBackgroundColor="#00000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/commentIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bottom_rounded_rectangle" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/post_comment"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <!--post card end-->

</androidx.constraintlayout.widget.ConstraintLayout>