<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="360sp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="0dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dialogBg"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/editTextSubjectName"
                    android:layout_width="254dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/edittext_line"
                    android:ems="10"
                    android:hint="@string/dialog_subject_name_hint"
                    android:inputType="text"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextSubjectCode" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="34dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="288dp"
                    android:visibility="invisible"
                    app:layout_constraintStart_toEndOf="@+id/editTextLecturerInCharge"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="invisible" />

                <EditText
                    android:id="@+id/editTextStartTime"
                    android:layout_width="254dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/edittext_line"
                    android:ems="10"
                    android:hint="@string/dialog_start_time_hint"
                    android:inputType="time"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextSubjectName" />

                <EditText
                    android:id="@+id/editTextEndTime"
                    android:layout_width="254dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/edittext_line"
                    android:ems="10"
                    android:hint="@string/dialog_end_time_hint"
                    android:inputType="time"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextStartTime" />

                <EditText
                    android:id="@+id/editTextSubjectCode"
                    android:layout_width="254dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@color/edittext_line"
                    android:ems="10"
                    android:hint=""
                    android:inputType="text"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextLecturerInCharge"
                    android:layout_width="254dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/edittext_line"
                    android:ems="10"
                    android:hint="@string/dialog_lec_hint"
                    android:inputType="text"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEndTime" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </FrameLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>